--- a/index.html
+++ b/index.html
@@ -1182,8 +1182,8 @@
                             <div class="JoinTeamButton"><p>Join Blue team</p></div>
                         </div>
 
-                        <div class="PlayersBoxesRoom">
-                            <div class="PlayerBoxRoom">
+                        <div class="PlayersBoxesRoom" >
+                            <div class="PlayerBoxRoom" data-id="1">
                                 <div class="SteamProfileAllDiv">
                                     <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
                                     <div class="center-containerRoomPlayer">
@@ -1193,7 +1193,7 @@
                                     </div>
                                 </div>
                                 <div class="UserNameSteamDiv">
-                                    <img class="" src="./imgs/Crown.svg" alt="">
+                                    <img class="CrownImg displayFlex" src="./imgs/Crown.svg" alt="">
                                     <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
                                 </div>
                                 <div class="IdAndKdDiv">
@@ -1202,17 +1202,123 @@
                                 </div>
                                 <div class="BlueLineBottomBoxPLayer"></div>
                                 <div class="ReadyLineBottomBoxPLayer"></div>
-                                <div class="OwnerShipHoevrDiv">
+                                <div class="OwnerShipHoevrDiv" data-id="1">
                                     <div class="kickSetOwnerDiv">
                                         <p>Kick</p>
                                         <p>Setowner</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="PlayerBoxRoom"></div>
-                            <div class="PlayerBoxRoom"></div>
-                            <div class="PlayerBoxRoom"></div>
-                            <div class="PlayerBoxRoom"></div>
+
+                            <div class="PlayerBoxRoom" data-id="2">
+                                <div class="SteamProfileAllDiv">
+                                    <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                                    <div class="center-containerRoomPlayer">
+                                        <div class="diamond-wrapperRoomPlayer">
+                                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="UserNameSteamDiv">
+                                    <img class="CrownImg" src="./imgs/Crown.svg" alt="">
+                                    <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
+                                </div>
+                                <div class="IdAndKdDiv">
+                                    <p>ID: <span>24</span></p>
+                                    <p>KDL <span>1.9</span></p>
+                                </div>
+                                <div class="BlueLineBottomBoxPLayer"></div>
+                                <div class="ReadyLineBottomBoxPLayer"></div>
+                                <div class="OwnerShipHoevrDiv" data-id="2">
+                                    <div class="kickSetOwnerDiv">
+                                        <p>Kick</p>
+                                        <p>Setowner</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="PlayerBoxRoom" data-id="3">
+                                <div class="SteamProfileAllDiv">
+                                    <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                                    <div class="center-containerRoomPlayer">
+                                        <div class="diamond-wrapperRoomPlayer">
+                                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="UserNameSteamDiv">
+                                    <img class="CrownImg" src="./imgs/Crown.svg" alt="">
+                                    <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
+                                </div>
+                                <div class="IdAndKdDiv">
+                                    <p>ID: <span>24</span></p>
+                                    <p>KDL <span>1.9</span></p>
+                                </div>
+                                <div class="BlueLineBottomBoxPLayer"></div>
+                                <div class="ReadyLineBottomBoxPLayer"></div>
+                                <div class="OwnerShipHoevrDiv" data-id="3">
+                                    <div class="kickSetOwnerDiv">
+                                        <p>Kick</p>
+                                        <p>Setowner</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="PlayerBoxRoom" data-id="4">
+                                <div class="SteamProfileAllDiv">
+                                    <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                                    <div class="center-containerRoomPlayer">
+                                        <div class="diamond-wrapperRoomPlayer">
+                                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="UserNameSteamDiv">
+                                    <img class="CrownImg" src="./imgs/Crown.svg" alt="">
+                                    <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
+                                </div>
+                                <div class="IdAndKdDiv">
+                                    <p>ID: <span>24</span></p>
+                                    <p>KDL <span>1.9</span></p>
+                                </div>
+                                <div class="BlueLineBottomBoxPLayer"></div>
+                                <div class="ReadyLineBottomBoxPLayer"></div>
+                                <div class="OwnerShipHoevrDiv" data-id="4">
+                                    <div class="kickSetOwnerDiv">
+                                        <p>Kick</p>
+                                        <p>Setowner</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="PlayerBoxRoom" data-id="1">
+                                <div class="SteamProfileAllDiv">
+                                    <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                                    <div class="center-containerRoomPlayer">
+                                        <div class="diamond-wrapperRoomPlayer">
+                                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="UserNameSteamDiv">
+                                    <img class="CrownImg" src="./imgs/Crown.svg" alt="">
+                                    <p class="UserSteamPLayernameRoom">CanX Player DDs</p>
+                                </div>
+                                <div class="IdAndKdDiv">
+                                    <p>ID: <span>24</span></p>
+                                    <p>KDL <span>1.9</span></p>
+                                </div>
+                                <div class="BlueLineBottomBoxPLayer"></div>
+                                <div class="ReadyLineBottomBoxPLayer"></div>
+                                <div class="OwnerShipHoevrDiv" data-id="1">
+                                    <div class="kickSetOwnerDiv">
+                                        <p>Kick</p>
+                                        <p>Setowner</p>
+                                    </div>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                     <div class="RedTeamDiv">
