--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
 
         <div class="animate__fadeIn animate__animated anim6">
-            <div class="CreateLobbyNewDiv ">
+            <div class="CreateLobbyNewDiv " onclick="pageHandler('RoomPage')" >
                 <div class="InsideCreateLobbyNew">
                     <div class="WhitlineTop"></div>
                     <p>Create New Lobby</p>
@@ -1148,10 +1148,10 @@
 
 
         <div class="InsideDetailsRoomLobby">
-            <div class="LeftRoomDetail">
-                <div>
+            <div class="LeftRoomDetail ">
+                <div class="animate__fadeIn animate__animated anim1">
                     <div class="RoomNameLobbyDeatails">
-                        <div class="TopTextRoomLobby animate__fadeIn animate__animated ">
+                        <div class="TopTextRoomLobby">
                             <p class="FirstPRoom">CANX ROOM LOBBYy</p>
                             <p class="SecondPRoom">CANX ROOM LOBBYy</p>
                         </div>
@@ -1168,9 +1168,9 @@
                     </div>
                     <p class="BetMoneyLobbyText">Bet money for winners <span>222000</span> $</p>
                 </div>
-                <div class="BlueAndRedDivTeam">
-                    <img class="VsImage" src="./imgs/VsImage.png" alt="">
-                    <div class="BlueTeamDiv">
+                <div class=" BlueAndRedDivTeam ">
+                    <img class="VsImage animatonload" src="./imgs/VsImage.png" alt="">
+                    <div class="BlueTeamDiv animatonload">
                         <div class="BlueShadowTopBox">
                         </div>
                         <div class="BlueShadowForTeam"></div>
@@ -1321,7 +1321,7 @@
 
                         </div>
                     </div>
-                    <div class="RedTeamDiv">
+                    <div class="RedTeamDiv animatonload">
                         <div class="RedShadowTopBox"></div>
                         <div class="RedShadowForTeam"></div>
                         <div class="TopTeamsDiv">
@@ -1477,7 +1477,7 @@
 
             <div>
                 <div class="RightRoomDetail">
-                    <div class="RightRoomDetailBg">
+                    <div class=" animatonload RightRoomDetailBg">
                         <img class="InsideRoomMapImage" src="./imgs/MapImage1.png" alt="">
                         <div class="RoundsRoomDetail">
                             <p>Rounds</p>
@@ -1486,7 +1486,7 @@
                         <div class="WhiteLineInsideRoomDetail"></div>
                         <div class="GunsRoomDetail">
                             <p>Gun</p>
-                            <p>Only Riffle</p>
+                            <p>Multi Gun</p>
                         </div>
                         <div class="WhiteLineInsideRoomDetail2"></div>
                         <div class="MapRoomDetail">
@@ -1495,7 +1495,7 @@
                         </div>
                     </div>
                     <div class="BottomOfmapRoomDetail">
-                        <div class="GreenBottomRoom">
+                        <div class="animatonload GreenBottomRoom">
                             <div class="GreenTopLine"></div>
                             <div class="InsideGreenButton">
                                 <img src="./imgs/check.svg" alt="">
@@ -1504,7 +1504,7 @@
                             </div>
                             <div class="GreenBottomLine"></div>
                         </div>
-                        <div class="RedBottomRoom">
+                        <div class="animatonload RedBottomRoom">
                             <div class="RedTopLine"></div>
                             <div class="InsideRedButtonRoom">
                                 <img src="./imgs/Close_Icon.svg" alt="">
