--- a/index.html
+++ b/index.html
@@ -256,6 +256,17 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
+                <div class="MapSelectDiv2 animate__fadeIn animate__animated anim2">
+                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="MapDetail">
+                        <h1>Map Name Here</h1>
+                        <p>Map Description insert here</p>
+                    </div>
+                    <div class="GreenSelectMap displayNone"></div>
+                    <div class="RedSelectMap displayNone"></div>
+                </div>
+
                 <div class="MapSelectDiv animate__fadeIn animate__animated anim3">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
