--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
-                <div class="MapSelectDiv2 animate__fadeIn animate__animated anim2">
+                <div class="MapSelectDivLocked animate__fadeIn animate__animated anim2">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
