--- a/index.html
+++ b/index.html
@@ -257,9 +257,11 @@
                 </div>
 
                 <div class="MapSelectDivLocked animate__fadeIn animate__animated anim2">
-                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
-                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
-                    <div class="MapDetail">
+                    <img class="MapImageLock" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage"Lock src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="LockDivBg"></div>
+
+                    <div class="MapDetailLock">
                         <h1>Map Name Here</h1>
                         <p>Map Description insert here</p>
                     </div>
