--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
 
                     <div class="MapDetailLock">
                         <h1>Map Name Here</h1>
-                        <p>Map Description insert here</p>
+                        <p>To unlock this map, you need to reach Level 10</p>
                     </div>
+                    <img class="LockIconForMap" src="./imgs/lockMap.png" alt="">
                     <div class="GreenSelectMap displayNone"></div>
                     <div class="RedSelectMap displayNone"></div>
                 </div>
