--- a/index.html
+++ b/index.html
@@ -259,13 +259,16 @@
                 <div class="MapSelectDivLocked animate__fadeIn animate__animated anim2">
                     <img class="MapImageLock" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage"Lock src="./imgs/UpparMapImage.svg" alt="">
-                    <div class="LockDivBg"></div>
+                    <div class="LockDivBg">
+                    <img class="LockIconForMap" src="./imgs/lockMap.png" alt="">
+
+                    </div>
+                    
 
                     <div class="MapDetailLock">
                         <h1>Map Name Here</h1>
                         <p>To unlock this map, you need to reach Level 10</p>
                     </div>
-                    <img class="LockIconForMap" src="./imgs/lockMap.png" alt="">
                     <div class="GreenSelectMap displayNone"></div>
                     <div class="RedSelectMap displayNone"></div>
                 </div>
