--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <h1>Map Name Here</h1>
                         <p>To unlock this map, you need to reach Level 10</p>
                     </div>
-                    <div class="GreenSelectMap displayNone"></div>
+                    <div class="GrayselectMap "></div>
                     <div class="RedSelectMap displayNone"></div>
                 </div>
 
