--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
                     <div class="MapDetailLock">
                         <h1>Map Name Here</h1>
-                        <p>To unlock this map, you need to reach Level 10</p>
+                        <p>To unlock this map, you need to reach <span>Level 10</span></p>
                     </div>
                     <div class="GrayselectMap "></div>
                     <div class="RedSelectMap displayNone"></div>
