--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@
 
 
       <div class="CustomNotification animate__fadeInDown animate__animated">
-        <p>Succesfully changed the ticket permssion</p>
+        <p>Succesfully Created new lobby</p>
       </div>
 
 
