--- a/index.html
+++ b/index.html
@@ -1543,6 +1543,11 @@
 
 
 
+      <div class="DeadLog">
+        <p class="animate__fadeInRight animate__animated">Player <span>radblack</span> number <span>2</span> is dead</p>
+        <p class="animate__fadeInRight animate__animated">Player <span>radbck</span> number <span>2</span> is dead</p>
+        <p class="animate__fadeInRight animate__animated">Player <span>radblacds</span> number <span>2</span> is dead</p>
+      </div>
 
       
 
