--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
 
 
       <div class="DeadLog">
-        <p class="animate__fadeInRight animate__animated">Player <span>radblack</span> number <span>2</span> is dead</p>
+        <p class="animate__fadeInRight animate__animated">RADBLACK <span><img src="https://wiki.rage.mp/wiki/File:Assault-rifle-icon.png" alt=""></span> number <span>2</span> is dead</p>
         <p class="animate__fadeInRight animate__animated">Player <span>radbck</span> number <span>2</span> is dead</p>
         <p class="animate__fadeInRight animate__animated">Player <span>radblacds</span> number <span>2</span> is dead</p>
       </div>
