--- a/index.html
+++ b/index.html
@@ -1544,9 +1544,7 @@
 
 
       <div class="DeadLog">
-        <p class="animate__fadeInRight animate__animated">RADBLACK <span><img src="./imgs/Pistol_Icon.png" alt=""></span> number <span>2</span> is dead</p>
-        <p class="animate__fadeInRight animate__animated">Player <span>radbck</span> number <span>2</span> is dead</p>
-        <p class="animate__fadeInRight animate__animated">Player <span>radblacds</span> number <span>2</span> is dead</p>
+        <p class="animate__fadeInRight animate__animated">RADBLACK <span><img src="./imgs/Pistol_Icon.png" alt=""> <span>Parzival</span></p>
       </div>
 
       
