--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
 
 
       <div class="DeadLog">
-        <p class="animate__fadeInRight animate__animated">RADBLACK <span><img src="./imgs/Pistol_Icon.png" alt=""> <span>Parzival</span></p>
+        <p class="animate__fadeInRight animate__animated">RADBLACK <span><img src="./imgs/Pistol_Icon.png" alt=""> </span> <span>Parzival</span></p>
       </div>
 
       
