--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
 
 
       <div class="DeadLog">
-        <p class="animate__fadeInRight animate__animated">RADBLACK <div class="IconsDiv"><img src="./imgs/Pistol_Icon.png" alt=""> <img src="./imgs/HeadShot-Icon.png" alt=""></div> <span>Parzival</span></p>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><p>RADBLACK <img src="./imgs/Pistol_Icon.png" alt=""> <img src="./imgs/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
       </div>
 
       
