--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,9 @@
 
 
       <div class="DeadLog">
-        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><p><span>RADBLACK</span> <img src="./imgs/Pistol_Icon.png" alt=""> <img src="./imgs/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img src="./imgs/Pistol_Icon.png" alt=""> <img src="./imgs/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img src="./imgs/Pistol_Icon.png" alt=""> <img src="./imgs/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img  src="./imgs/Pistol_Icon.png" alt=""> <img class="displayNone" src="./imgs/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
       </div>
 
       
