--- a/index.html
+++ b/index.html
@@ -1547,6 +1547,9 @@
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img src="./imgs/GunsIcon/Pistol_Icon.png" alt=""> <img src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img src="./imgs/GunsIcon/Pistol_Icon.png" alt=""> <img src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACK</span> <img  src="./imgs/GunsIcon/Knife_Icon.png" alt=""> <img class="displayNone" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/Knife_Icon.png" alt=""> <img class="displayNone" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/AssaultRifle_Icon.png" alt=""> <img class="displayNone" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>Parzival</span></p></div>
+        <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/Sniper_Icon.png" alt=""> <img class="" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>ParzivalKoni</span></p></div>
       </div>
 
       
