--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,8 @@
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/Sniper_Icon.png" alt=""> <img class="" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>ParzivalKoni</span></p></div>
       </div>
 
+      <div class="RedEndScreen"></div>
+
       
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
