--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,8 @@
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/Sniper_Icon.png" alt=""> <img class="" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>ParzivalKoni</span></p></div>
       </div>
 
-      <div class="RedEndScreen"></div>
+      <div class="RedEndScreen">
+      </div>
 
       
 
