--- a/index.html
+++ b/index.html
@@ -1553,6 +1553,10 @@
       </div>
 
       <div class="TopTeamPlayerUi">
+        <div class="CenterDetailTexts">
+            <p class="TimerUi">04:15</p>
+            <div class="RoundTeamsUi"><p>1</p><p>/</p><p>2</p></div>
+        </div>
 
       </div>
 
