--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@
       <div class="TopTeamPlayerUi">
         <div class="CenterDetailTexts">
             <p class="TimerUi">04:15</p>
-            <div class="RoundTeamsUi"><p>1</p><p>/</p><p>2</p></div>
+            <div class="RoundTeamsUi"><p>2</p><p class="AfacadFont">/</p><p>5</p></div>
         </div>
 
       </div>
