--- a/index.html
+++ b/index.html
@@ -1565,6 +1565,8 @@
               </div>
         </div>
 
+        <div class="BlueTeamTopUi"></div>
+
       </div>
 
       <div class="RedEndScreen">
