--- a/index.html
+++ b/index.html
@@ -1565,11 +1565,22 @@
               </div>
         </div>
 
-        <div class="BlueTeamTopUi"></div>
+        <div class="BlueTeamTopUi">
+            <div class="SteamProfileAllDiv">
+                <img class="SteamBGLine" src="./imgs/RoomSteamBG.svg" alt="">
+                <div class="center-containerRoomPlayer">
+                    <div class="diamond-wrapperRoomPlayer">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+        </div>
 
       </div>
 
       <div class="RedEndScreen">
+
+
       </div>
 
       
