--- a/index.html
+++ b/index.html
@@ -1566,8 +1566,8 @@
         </div>
 
         <div class="BlueTeamTopUi">
-                <div class="center-containerRoomPlayer">
-                    <div class="diamond-wrapperRoomPlayer">
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
