--- a/index.html
+++ b/index.html
@@ -1566,11 +1566,14 @@
         </div>
 
         <div class="BlueTeamTopUi">
+            <div>
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+            </div>
         </div>
 
       </div>
