--- a/index.html
+++ b/index.html
@@ -1566,7 +1566,7 @@
         </div>
 
         <div class="BlueTeamTopUi">
-            <div>
+            <div class="PlayerBoxTopUi">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
@@ -1574,6 +1574,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            
         </div>
 
       </div>
