--- a/index.html
+++ b/index.html
@@ -1592,6 +1592,24 @@
                     </div>
                 </div>
             </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
             
         </div>
 
