--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,54 @@
                     </div>
                 </div>
             </div>
-            
+        </div>
+
+
+        <div class="RedTeamTopUi">
+            <div class="PlayerBoxTopUi">
+                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
         </div>
 
       </div>
