--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,8 @@
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class=" displayNone" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt="">
                 <div class="center-containerTopUi">
                     <div class="Reddiamond-wrapperTopUi">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
