--- a/index.html
+++ b/index.html
@@ -1615,9 +1615,11 @@
 
         <div class="RedTeamTopUi">
             <div class="PlayerBoxTopUi">
-                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
@@ -1628,33 +1630,39 @@
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="Reddiamond-wrapperTopUi">
+                        <div class="Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
-
+            
             <div class="PlayerBoxTopUi">
-                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="Reddiamond-wrapperTopUi">
-                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
-                    </div>
-                </div>
-            </div>
-
-            <div class="PlayerBoxTopUi">
-                <img class="RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
-                <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
