Fixing others shit

--- a/index.html
+++ b/index.html
@@ -1568,8 +1568,10 @@
         <div class="BlueTeamTopUi">
             <div class="PlayerBoxTopUi">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
@@ -1577,8 +1579,10 @@
 
             <div class="PlayerBoxTopUi">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
@@ -1586,8 +1590,10 @@
 
             <div class="PlayerBoxTopUi">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
@@ -1595,22 +1601,29 @@
 
             <div class="PlayerBoxTopUi">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUi">
+                        <div class="Deadshadow"></div>
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
         </div>
+
+
+
 
 
         <div class="RedTeamTopUi">
@@ -1656,7 +1669,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="PlayerBoxTopUi">
                 <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
@@ -1668,7 +1681,6 @@
                 </div>
             </div>
         </div>
-
       </div>
 
       <div class="RedEndScreen">
