--- a/index.html
+++ b/index.html
@@ -1626,6 +1626,139 @@
 
 
 
+        <div class="RedTeamTopUi">
+            <div class="PlayerBoxTopUi">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="displayNone RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="Reddiamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+
+
+
+      <div class="TopTeamPlayerUiDeathmatch ">
+        <div class="CenterDetailTexts">
+            <p class="TimerUi">04:15</p>
+            <div class="RoundTeamsUi"><p>2</p><p class="AfacadFont">/</p><p>5</p></div>
+            <div class="RoundsShapeUi">
+                <div class="WhiteRoundShape"></div>
+                <div class="WhiteRoundShape"></div>
+                <div class="GrayRoundShape"></div>
+                <div class="GrayRoundShape"></div>
+                <div class="GrayRoundShape"></div>
+              </div>
+        </div>
+
+        <div class="BlueTeamTopUi">
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class="displayNone BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                        <div class="Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            
+
+            <div class="PlayerBoxTopUi">
+                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
+                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUi">
+                        <div class="displayNone Deadshadow"></div>
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
 
 
         <div class="RedTeamTopUi">
@@ -1684,6 +1817,7 @@
             </div>
         </div>
       </div>
+      
 
       <div class="RedEndScreen">
       </div>
