--- a/index.html
+++ b/index.html
@@ -1690,14 +1690,8 @@
       <div class="TopTeamPlayerUiDeathmatch ">
         <div class="CenterDetailTexts">
             <p class="TimerUi">04:15</p>
-            <div class="RoundTeamsUi"><p>2</p><p class="AfacadFont">/</p><p>5</p></div>
-            <div class="RoundsShapeUi">
-                <div class="WhiteRoundShape"></div>
-                <div class="WhiteRoundShape"></div>
-                <div class="GrayRoundShape"></div>
-                <div class="GrayRoundShape"></div>
-                <div class="GrayRoundShape"></div>
-              </div>
+            <div class="RoundTeamsUiDeathmatch"><p class="TopKill">RaDBlacsk</p></div>
+
         </div>
 
         <div class="BlueTeamTopUi">
