Top KIll Top UI

--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,8 @@
       <div class="TopTeamPlayerUiDeathmatch ">
         <div class="CenterDetailTexts">
             <p class="TimerUi">04:15</p>
-            <div class="RoundTeamsUiDeathmatch"><p class="TopKill">RaDBlacsk</p></div>
+            <div class="RoundTeamsUiDeathmatch"><p class="TopKillNumber"><span>100</span> Kill</p></div>
+            <div class="RoundTeamsUiDeathmatch"><p class="TopKill">RaDBlasssk</p></div>
 
         </div>
 
